Module 2/index.css
/* ... */
   
  .module2-thq-io-structure-elm {
    top: 2944px;
    left: 29px;
    width: 1292px;
    height: auto;
    display: flex;
    position: absolute;
    align-items: flex-start;
    flex-shrink: 1;
  }
   
  .module2-thq-text-elm364 {
    top: 77px;
    color: rgba(255, 255, 255, 1);
    width: 1292px;
    height: auto;
    position: absolute;
    font-size: 24px;
    font-style: Light;
    text-align: left;
    font-family: Alexandria;
    font-weight: 300;
    line-height: 35px;
    font-stretch: normal;
    text-decoration: none;
  }
   
  .module2-thq-text-elm365 {
    font-weight: 300;
  }
   
  .module2-thq-text-elm366 {
    font-weight: 200;
  }
   
  .module2-thq-text-elm367 {
    font-weight: 200;
  }
   
  .module2-thq-text-elm368 {
    font-weight: 300;
  }
   
  .module2-thq-text-elm373 {
    color: rgba(255, 255, 255, 1);
    width: 564px;
    height: auto;
    position: absolute;
    font-size: 32px;

    font-style: Light;
    text-align: left;
    font-family: Alexandria;
    font-weight: 300;
    line-height: normal;
    font-stretch: normal;
    text-decoration: none;
  }
   
  .module2-thq-interrupt-handling-elm {
    top: 2638px;
    left: 21px;
    width: 1292px;
    height: auto;
    display: flex;
    position: absolute;
    align-items: flex-start;
    flex-shrink: 1;
  }
   
  .module2-thq-text-elm374 {
    top: 65px;
    color: rgba(255, 255, 255, 1);
    width: 1292px;
    height: auto;
    position: absolute;
    font-size: 24px;
    font-style: Light;
    text-align: left;
    font-family: Alexandria;
    font-weight: 300;
    line-height: 35px;
    font-stretch: normal;
    text-decoration: none;
  }
   
  .module2-thq-text-elm375 {
    font-weight: 300;
  }
   
  .module2-thq-text-elm379 {
    color: rgba(255, 255, 255, 1);
    width: 564px;
    height: auto;
    position: absolute;
    font-size: 32px;

    font-style: Light;
    text-align: left;
    font-family: Alexandria;
    font-weight: 300;
    line-height: normal;
    font-stretch: normal;
    text-decoration: none;
  }
   
  .module2-thq-interrupts-elm {
    top: 2200px;
    left: 21px;
    width: 1292px;
    height: auto;
    display: flex;
    position: absolute;
    align-items: flex-start;
    flex-shrink: 1;
  }
   
  .module2-thq-text-elm380 {
    color: rgba(255, 255, 255, 1);
    width: 564px;
    height: auto;
    position: absolute;
    font-size: 32px;

    font-style: Light;
    text-align: left;
    font-family: Alexandria;
    font-weight: 300;
    line-height: normal;
    font-stretch: normal;
    text-decoration: none;
  }
   
  .module2-thq-text-elm381 {
    top: 65px;
    color: rgba(255, 255, 255, 1);
    width: 1292px;
    height: auto;
    position: absolute;
    font-size: 24px;
    font-style: ExtraLight;
    text-align: left;
    font-family: Alexandria;
    font-weight: 200;
    line-height: 35px;
    font-stretch: normal;
    text-decoration: none;
  }
   
  .module2-thq-computer-system-organization-elm {
    top: 981px;
    left: 0px;
    width: 1277px;
    height: auto;
    display: flex;
    position: absolute;
    align-items: flex-start;
    flex-shrink: 1;
  }
   
  .module2-thq-container2-elm2 {
    right: -2px;
    width: 1277px;
    bottom: 2px;
    height: 1103px;
    position: absolute;
    border-radius: 20px;
  }
   
  .module2-thq-text-elm389 {
    left: 26px;
    color: rgba(255, 255, 255, 1);
    width: 564px;
    height: auto;
    position: absolute;
    font-size: 32px;

    font-style: Light;
    text-align: left;
    font-family: Alexandria;
    font-weight: 300;
    line-height: normal;
    font-stretch: normal;
    text-decoration: none;
  }
   
  .module2-thq-text-elm391 {
    top: 81px;
    left: 26px;
    color: rgba(255, 255, 255, 1);
    width: 1250px;
    height: auto;
    position: absolute;
    font-size: 24px;
    font-style: ExtraLight;
    text-align: left;
    font-family: Alexandria;
    font-weight: 200;
    line-height: 35px;
    font-stretch: normal;
    text-decoration: none;
  }
   
  .module2-thq-text-elm393 {
    top: 216px;
    left: 27px;
    color: rgb(255, 255, 255);
    width: 1224px;
    height: auto;
    position: absolute;
    font-size: 24px;
    font-style: Light;
    text-align: left;
    font-family: Alexandria;
    font-weight: 300;
    line-height: 35px;
    font-stretch: normal;
    text-decoration: none;
  }
   
  .module2-text322 {
    font-weight: 300;
  }
   
  .module2-text324 {
    font-weight: 200;
  }
   
  .module2-text326 {
    font-weight: 200;
  }
   
  .module2-text328 {
    font-weight: 200;
  }
   
  .module2-text330 {
    font-weight: 200;
  }
   
  .module2-text333 {
    font-weight: 300;
  }
   
  .module2-text335 {
    font-weight: 200;
  }
   
  .module2-text337 {
    font-weight: 200;
  }
   
  .module2-text339 {
    font-weight: 200;
  }
   
  .module2-text342 {
    font-weight: 300;
  }
   
  .module2-text344 {
    font-weight: 200;
  }
   
  .module2-text346 {
    font-weight: 200;
  }
   
  .module2-text348 {
    font-weight: 200;
  }
   
  .module2-text351 {
    font-weight: 300;
  }
   
  .module2-text353 {
    font-weight: 200;
  }
   
  .module2-text355 {
    font-weight: 200;
  }
   
  .module2-text357 {
    font-weight: 200;
  }
   
  .module2-text359 {
    font-weight: 200;
  }
   
  .module2-text362 {
    font-weight: 300;
  }
   
  .module2-thq-computer-system-architecture-elm {
    top: 447px;
    left: 1px;
    width: 1277px;
    height: 491px;
    display: flex;
    position: absolute;
    align-items: flex-start;
    flex-shrink: 1;
  }
   
  .module2-thq-container1-elm3 {
    top: 60px;
    right: -12px;
    width: 1277px;
    height: 436px;
    position: relative;
    border-radius: 20px;
  }
/* ... */

